[gd_scene load_steps=4 format=3 uid="uid://dvx5i7x7nuxcu"]

[ext_resource type="PackedScene" path="res://userInterface/Title.tscn" id="1"]
[ext_resource type="PackedScene" path="res://userInterface/But_ChangeScene.tscn" id="2"]
[ext_resource type="Script" path="res://screens/Character_Add.gd" id="3"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("3")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 0

[node name="Title" parent="." instance=ExtResource("1")]
layout_mode = 0
anchor_left = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
text = "Create Character (temp)"

[node name="But_SaveChar" type="Button" parent="Title"]
layout_mode = 0
text = "Save Character"

[node name="But_ChangeScene" parent="Title" instance=ExtResource("2")]
layout_mode = 0
text = "Temp: Main Menu"

[node name="But_StartNewGame" parent="Title" instance=ExtResource("2")]
layout_mode = 0
text = "Temp: Start New Game"

[node name="FileDialog" type="FileDialog" parent="Title"]
access = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Title"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5

[node name="LabelName" type="Label" parent="Title/VBoxContainer"]
layout_mode = 2
text = "NAME
"

[node name="LineEdit" type="LineEdit" parent="Title/VBoxContainer/LabelName"]
layout_mode = 0

[node name="LabelProfession" type="Label" parent="Title/VBoxContainer"]
layout_mode = 2
text = "PROFESSION
"

[node name="LineEdit" type="LineEdit" parent="Title/VBoxContainer/LabelProfession"]
layout_mode = 0

[node name="LabelStrength" type="Label" parent="Title/VBoxContainer"]
layout_mode = 2
text = "STRENGTH
"

[node name="LineEdit" type="LineEdit" parent="Title/VBoxContainer/LabelStrength"]
layout_mode = 0

[node name="LabelIntellect" type="Label" parent="Title/VBoxContainer"]
layout_mode = 2
text = "INTELLECT
"

[node name="LineEdit" type="LineEdit" parent="Title/VBoxContainer/LabelIntellect"]
layout_mode = 0

[node name="LabelWillpower" type="Label" parent="Title/VBoxContainer"]
layout_mode = 2
text = "WILLPOWER
"

[node name="LineEdit" type="LineEdit" parent="Title/VBoxContainer/LabelWillpower"]
layout_mode = 0

[node name="LabelCharm" type="Label" parent="Title/VBoxContainer"]
layout_mode = 2
text = "CHARM"

[node name="LineEdit" type="LineEdit" parent="Title/VBoxContainer/LabelCharm"]
layout_mode = 0

[node name="LabelWeapon" type="Label" parent="Title/VBoxContainer"]
layout_mode = 2
text = "WEAPON
"

[node name="LineEdit" type="LineEdit" parent="Title/VBoxContainer/LabelWeapon"]
layout_mode = 0

[node name="LabelArmor" type="Label" parent="Title/VBoxContainer"]
layout_mode = 2
text = "ARMOR"

[node name="LineEdit" type="LineEdit" parent="Title/VBoxContainer/LabelArmor"]
layout_mode = 0

[node name="LabelQuote" type="Label" parent="Title/VBoxContainer"]
layout_mode = 2
text = "QUOTE"

[node name="LineEdit" type="LineEdit" parent="Title/VBoxContainer/LabelQuote"]
layout_mode = 0

[connection signal="pressed" from="Title/But_SaveChar" to="." method="_on_But_SaveChar_pressed"]
[connection signal="file_selected" from="Title/FileDialog" to="." method="_on_FileDialog_file_selected"]
